# rust-criu

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  README.rst  build.rs
.github/workflows/: codecov.yml  test.yml
rust-criu-protobuf/: Cargo.toml  build.rs
rust-criu-protobuf/src/: rpc.rs
src/: bin.rs  lib.rs  notify.rs
src/proto/: rpc.rs
src/rust_criu_protobuf/: rpc.rs
src/tests/: action_script.rs  basic.rs  empty_net_ns.rs  external_netns.rs  lazy_pages.rs  mod.rs  orphan_pts.rs  version.rs
test/: loop  loop.c  loop_pts.c  prepare-fedora-coverage-environment.sh
tests/: action_script.rs  basic.rs  empty_net_ns.rs  external_netns.rs  lazy_pages.rs  orphan_pts.rs  version.rs
