[package]
name = "rust-criu"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for CRIU"
repository = "https://github.com/checkpoint-restore/rust-criu"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
libc = "0.2"
protobuf = "2.25.2"
anyhow = "1.0.56"

[build-dependencies]
protobuf-codegen-pure = "2.25.2"

[lib]
name = "rust_criu"
path = "src/lib.rs"

[[bin]]
name = "rust-criu-test"
path = "src/bin.rs"
