[package]
name = "rust-criu"
version = "0.5.0"
edition = "2021"
description = "Rust bindings for CRIU"
repository = "https://github.com/checkpoint-restore/rust-criu"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
libc = "0.2"
thiserror = "1"
protobuf = "= 3.7.2"
nix = { version = "0.31", features = ["fs", "signal", "process"] }

[build-dependencies]
protobuf-codegen = "= 3.7.2"

[dev-dependencies]
nix = { version = "0.31", features = ["fs", "signal", "process"] }

[lib]
name = "rust_criu"
path = "src/lib.rs"

[[bin]]
name = "rust-criu-test"
path = "src/bin.rs"
