[package]
name = "rust-criu"
version = "0.6.0"
edition = "2021"
description = "Rust bindings for CRIU"
repository = "https://github.com/checkpoint-restore/rust-criu"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
libc = "0.2"
thiserror = "2"
protobuf = "= 3.7.2"

[build-dependencies]
protobuf-codegen = "= 3.7.2"

[dev-dependencies]
nix = { version = "0.31", features = ["fs", "sched", "signal", "process", "user"] }

[lib]
name = "rust_criu"
path = "src/lib.rs"
